[project]
name = "finalproject-zamanov-m25-555"
version = "0.1.0"
description = "Platform for tracking and simulating currency trading"
authors = [
    {name = "Аноним Ноунеймович",email = "midnight01327@yandex.ru"}
]
requires-python = ">=3.13"
dependencies = [
    "prettytable (>=3.17.0,<4.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "valutatrade_hub"}]

[tool.poetry.scripts]
project = "main:main"

[tool.ruff]
line-length = 125
target-version = "py313"
exclude = [".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
